assets/css/main.css
@charset "UTF-8";
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
.local-icon::before {
    content: "\f2ed";
    font-family: "Font Awesome 5 Free";
}
.github-icon::before {
    content:"\f09b";
    font-family: "Font Awesome 5 Brands";
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}
/* end reset css */
/* font awesome */
@font-face {
    font-family: "Font Awesome 5 Brands";
    font-style: normal;
    font-weight: normal;
    src: url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-brands-400.eot);
    src: url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-brands-400.eot?#iefix) format("embedded-opentype"),url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-brands-400.woff2) format("woff2"),url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-brands-400.woff) format("woff"),url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-brands-400.ttf) format("truetype"),url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-brands-400.svg#fontawesome) format("svg")
}
@font-face {
    font-family: "Font Awesome 5 Free";
    font-style: normal;
    font-weight: 400;
    src: url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-regular-400.eot);
    src: url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-regular-400.eot?#iefix) format("embedded-opentype"),url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-regular-400.woff2) format("woff2"),url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-regular-400.woff) format("woff"),url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-regular-400.ttf) format("truetype"),url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-regular-400.svg#fontawesome) format("svg")
}
@font-face {
    font-family: "Font Awesome 5 Free";
    font-style: normal;
    font-weight: 900;
    src: url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-solid-900.eot);
    src: url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-solid-900.eot?#iefix) format("embedded-opentype"),url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-solid-900.woff2) format("woff2"),url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-solid-900.woff) format("woff"),url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-solid-900.ttf) format("truetype"),url(https://use.fontawesome.com/releases/v5.1.0/webfonts/fa-solid-900.svg#fontawesome) format("svg")
}
/* font awesome */
@media (max-width: 480px) {
    :root {
        font-size: 3vw;
    }
    h6.domain {
        display: none;
    }
}
@media (min-width: 480px) {
    :root {
        font-size: 2.5vw;
    }
    h6.domain {
        display: none;
    }
}
@media (min-width: 576px) {
    :root {
        font-size: 2.3vw;
    }
    h6.domain {
        display: none;
    }
}
@media (min-width: 768px) {
    :root {
        font-size: 1.8vw;
    }
    h6.domain {
        display: none;
    }
}
@media (min-width: 992px) {
    :root {
        font-size: 1.2vw;
    }
    h6.domain {
        display: inline;
    }
}
@media (min-width: 1200px) {
    :root {
        font-size: 1.1vw;
    }
    h6.domain {
        display: inline;
    }
}
@media (min-width: 1500px) {
    :root {
        font-size: 1vw;
    }
    h6.domain {
        display: inline;
    }
}
@media (min-width: 1800px) {
    :root {
        font-size: .8vw;
    }
}
@media (min-width: 2200px) {
    :root {
        font-size: .6vw;
    }
}
* {
    overflow-wrap: break-word;
    word-wrap: break-word;
    /* This is the dangerous one in WebKit, as it breaks things wherever */
    word-break: break-all;
    /* Instead use this non-standard one: */
    word-break: break-word;
    hyphens: auto;
}
:root {

}
body {
    background: Window;
    color: WindowText;
    display: grid;
    padding: 0.5rem;
    grid-gap: 0.5rem;
    /*grid-template-rows: 3.4rem minmax(10fr, max-content) 2rem;*/
    grid-template-areas: "header" "main" "footer";
}
body > header {
    display: grid;
    grid-template-columns: 6fr 2fr;
    grid-template-rows: 1fr;
    grid-area: header;
    grid-template-areas: "main" "aside";
}
body > header h1 {
    font-size: 1.6em;
    font-weight: lighter;
    grid-area: main;
}
body > header menu {
    text-align: right;
}
body > header menu a,
body > header menu a:visited,
body > header menu a:active
{
    text-decoration: none;
}
body > header h1 a,
body > header h1 a:hover,
body > header h1 a:visited,
body > header h1 a:active
{
    color: WindowText;
    text-decoration: none;
}
body > header h1 a:before {
    /*content: "♻";
    content: "\f1b8";*/
    content: "\f2ed";
    font-family: "Font Awesome 5 Free";
    font-weight: 400;
    margin-right: .4em;
}
body > main {
    grid-area: main;
}
body > footer {
    grid-area: footer;
    font-size: 0.7em;
}
.inverted {
    color: Window !important;
    background-color: WindowText !important;
}
.inverted a {
    color: dodgerblue;
}
a:visited {
    color: rebeccapurple;
}
/* ... */

